
# ---------------------------------------------------------------------------------------
# ---------------------------------------- poetry ----------------------------------------
# ---------------------------------------------------------------------------------------

[tool.poetry]
name = "iris"
version = "0.1.0"
description = "Utilities for coloring strings and printing them to stdout."
authors = ["David Alvarez Lombardi <dqalombardi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pylint = "^2.15.3"
mypy = "^0.982"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------------------
# ---------------------------------------- isort ----------------------------------------
# ---------------------------------------------------------------------------------------

[tool.isort]
include_trailing_comma = true
known_first_party = "iris"
line_length = 120
multi_line_output = 3
profile = "black"
src_paths = [
    "iris",
    "tests",
]

# ---------------------------------------------------------------------------------------
# ---------------------------------------- black ----------------------------------------
# ---------------------------------------------------------------------------------------

[tool.black]
line-length = 120

# ---------------------------------------------------------------------------------------
# ---------------------------------------- pylint ---------------------------------------
# ---------------------------------------------------------------------------------------

[tool.pylint.messages_control]
disable = [
    "useless-return",
]
max-line-length = 120

# ---------------------------------------------------------------------------------------
# ----------------------------------------- mypy ----------------------------------------
# ---------------------------------------------------------------------------------------

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
python_version = "3.10"
